@@ -26,7 +26,6 @@ package conseq4j.execute;
 
 import static conseq4j.TestUtils.awaitAllComplete;
 import static conseq4j.TestUtils.createSpyingTasks;
-import static java.util.stream.Collectors.toList;
 import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -49,7 +48,6 @@ class ConseqExecutorTest {
     try (ConseqExecutor conseqExecutor = ConseqExecutor.instance()) {
       List<SpyingTask> tasks = TestUtils.createSpyingTasks(TASK_COUNT);
       UUID sameSequenceKey = UUID.randomUUID();
-
       resultFutures = new ArrayList<>();
       int cancelTaskIdx = 1;
       for (int i = 0; i < TASK_COUNT; i++) {
@@ -73,9 +71,7 @@ class ConseqExecutorTest {
     int concurrency = TASK_COUNT * 2;
     ConseqExecutor conseqExecutor = ConseqExecutor.instance(concurrency);
     UUID sameSequenceKey = UUID.randomUUID();
-
     tasks.forEach(task -> conseqExecutor.execute(task, sameSequenceKey));
-
     TestUtils.assertConsecutiveRuntimes(tasks);
     int actualThreadCount = TestUtils.actualExecutionThreadCount(tasks);
     assertTrue(Range.closed(1, TASK_COUNT).contains(actualThreadCount));
@@ -85,10 +81,8 @@ class ConseqExecutorTest {
   void noExecutorLingersOnRandomSequenceKeys() {
     try (ConseqExecutor sut = ConseqExecutor.instance()) {
       List<SpyingTask> tasks = TestUtils.createSpyingTasks(100);
-
       tasks.parallelStream().forEach(t -> sut.execute(t, UUID.randomUUID()));
       TestUtils.awaitAllComplete(tasks);
-
       await().until(sut::noTaskPending);
     }
   }
@@ -98,10 +92,8 @@ class ConseqExecutorTest {
     try (ConseqExecutor sut = ConseqExecutor.instance()) {
       UUID sameSequenceKey = UUID.randomUUID();
       List<SpyingTask> tasks = TestUtils.createSpyingTasks(100);
-
       tasks.parallelStream().forEach(t -> sut.execute(t, sameSequenceKey));
       TestUtils.awaitAllComplete(tasks);
-
       await().until(sut::noTaskPending);
     }
   }
@@ -114,7 +106,6 @@ class ConseqExecutorTest {
     long sameKeyEndTimeMillis;
     long differentKeysStartTimeMillis;
     try (ConseqExecutor sut = ConseqExecutor.instance()) {
-
       sameKeyStartTimeMillis = System.currentTimeMillis();
       sameTasks.forEach(t -> sut.execute(t, sameSequenceKey));
       awaitAllComplete(sameTasks);
@@ -124,7 +115,6 @@ class ConseqExecutorTest {
     }
     awaitAllComplete(sameTasks);
     long differentKeysEndTimeMillis = System.currentTimeMillis();
-
     long runtimeConcurrent = differentKeysEndTimeMillis - differentKeysStartTimeMillis;
     long runtimeSequential = sameKeyEndTimeMillis - sameKeyStartTimeMillis;
     assertTrue(runtimeConcurrent < runtimeSequential);
@@ -135,12 +125,10 @@ class ConseqExecutorTest {
     int threadPoolSize = TASK_COUNT / 10;
     List<Future<SpyingTask>> futures;
     try (ConseqExecutor conseqExecutor = ConseqExecutor.instance(threadPoolSize)) {
-
       futures = TestUtils.createSpyingTasks(TASK_COUNT).stream()
           .map(task -> conseqExecutor.submit(task.toCallable(), UUID.randomUUID()))
-          .collect(toList());
+          .toList();
     }
-
     final long actualThreadCount = TestUtils.actualExecutionThreadCountIfAllCompleteNormal(futures);
     assertEquals(threadPoolSize, actualThreadCount);
   }
@@ -149,12 +137,10 @@ class ConseqExecutorTest {
   void submitConcurrencyBoundedByTotalTaskCount() {
     List<Future<SpyingTask>> futures;
     try (ConseqExecutor conseqExecutor = ConseqExecutor.instance(TASK_COUNT * 10)) {
-
       futures = TestUtils.createSpyingTasks(TASK_COUNT).stream()
           .map(task -> conseqExecutor.submit(task.toCallable(), UUID.randomUUID()))
-          .collect(toList());
+          .toList();
     }
-
     final long actualThreadCount = TestUtils.actualExecutionThreadCountIfAllCompleteNormal(futures);
     assertTrue(actualThreadCount <= TASK_COUNT);
   }
